@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sat Jan 18 10:31:52 CET 2014
-buildNumber0=2949
+#Sat Jan 18 11:53:06 CET 2014
+buildNumber0=2954
